--- a/style.css
+++ b/style.css
@@ -44,10 +44,13 @@ a{
     color: black;
     text-decoration: none;
     text-decoration-color: color(white);
+    box-shadow: inset 0 0 0 0 #a61fcf;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
 
 a:hover{
-    color:grey;
+    box-shadow: inset 200px 0 0 0 #54b3d6;
+    color: white;
     text-decoration: underline;
     text-underline-offset: 0.5rem;
     text-decoration-color: rgb(181,181,181);
@@ -55,10 +58,17 @@ a:hover{
 
 .logo {
     font-size: 2rem;
+    box-shadow: inset 0 0 0 0 #a61fcf;
+    color: #000000;
+    margin: 0 -.25rem;
+    padding: 0 .25rem;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
 
 .logo:hover {
     cursor: default;
+    box-shadow: inset 200px 0 0 0 #54b3d6;
+    color: white;
 }
 
 /* hamburger */
@@ -175,7 +185,7 @@ section {
 .section__text__p1 {
     text-align: center;
 }
-.section__text__p1 {
+.section__text__p2 {
     font-size: 1.75rem;
     margin-bottom: 1rem;
 }
@@ -197,5 +207,134 @@ section {
     height: 2rem;
 }
 
+.btn-container {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.btn {
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width: 8rem;
+    border-radius: 2rem;
+}
+
+.btn-color-1, .btn-color-2 {
+    border: rgb(53,53,53) 0.2rem solid;
+}
+.btn-color-1:hover, .btn-color-2:hover {
+    cursor: pointer;
+}
+.btn-color-1, .btn-color-2:hover {
+    background: rgb(53,53,53);
+    color: white;
+}
+
+.btn-color-1:hover {
+    background: rgb(255,255,255);
+    color: black;
+}
+
+.btn-color-2{
+    background: none;
+}
+
+.btn-color-2:hover{
+    border: rgb(255,255,255) 0.1rem solid;
+}
+
+.btn-container {
+    gap: 1rem;
+}
+
+#about {
+    position: relative;
+}
+
+.about-containers {
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
+.about-details-container {
+    justify-content: center;
+    flex-direction: column;
+}
+
+.about-containers, .about-details-container {
+    display: flex;
+}
+
+.about-pic {
+    border-radius: 4rem;
+}
+
+.arrow {
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+}
+
+.details-container {
+    padding: 1rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53,53,53) 0.1rem solid;
+    border-color: rgb(163,163,163);
+    text-align: center;
+}
+
+.section-container {
+    gap: 4rem;
+    height: 80%;
+}
+
+.section_pic-container {
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+}
+
+/* experience */ 
+
+#experience {
+    position: relative;
+}
+
+.experience-sub-title {
+    color: rgb(85,85,85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.experience-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+article {
+    display: flex;
+    width: 10rem;
+    gap: 0.5rem;
+}
+
+article .icon {
+    cursor: default;
+}
 
 
