--- a/style.css
+++ b/style.css
@@ -149,7 +149,6 @@ a:hover{
 
 section {
     padding: 4vh;
-    height: 96vh;
     margin: 0 10rem;
     box-sizing: border-box;
     min-height: fit-content;
@@ -339,6 +338,78 @@ article .icon {
 
 /* interests */
 
+#interests {
+    position: relative;
+}
 
+.color-container {
+    border-color: rgb(163,163,163);
+    background: rgb(250,250,250);
+}
 
+.interests-img {
+    border-radius: 2rem;
+    width: 50%;
+    height: 50%;
+}
 
+.interests-title {
+    margin: 1rem;
+    color: black;
+}
+
+.interests-btn {
+    color: black;
+    border-color: rgb(163,163,163);
+}
+
+/* contact */
+
+#contact {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53,53,53) 0.1rem solid;
+    border-color: rgb(163,163,163);
+    background: (250,250,250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p {
+    font-size: larger;
+}
+
+.contact-icon {
+    cursor: default;
+}
+
+.email-icon{
+    height: 2.5rem;
+}
+
+/* footer */
+
+footer {
+    height: 26vh;
+    margin: 0 1rem;
+}
+
+footer p{
+    text-align: center;
+}
