--- a/style.css
+++ b/style.css
@@ -11,6 +11,19 @@
     font-family: 'Roboto Condensed', sans-serif;
  }
 
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+
+.show {
+        opacity: 1;
+        filter: blur(0);
+        transform: translateX(0);
+}
+
  html {
     scroll-behavior: smooth;
  }
@@ -250,6 +263,7 @@ section {
 
 #about {
     position: relative;
+    animation: fade-up 0.5s;
 }
 
 .about-containers {
