--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
  body {
     font-family: 'Roboto Condensed', sans-serif;
+    background-image: url("./assets/background.jpg");
  }
 
 .hidden {
@@ -90,6 +91,7 @@ a:hover{
     display: none;
     position: relative;
     z-index: 1;
+    
 }
 
 .hamburger-menu {
@@ -117,7 +119,7 @@ a:hover{
     position: absolute;
     top: 100%;
     right: 0%;
-    background-color: white;
+    background: ghostwhite;
     width: fit-content;
     max-height: 0;
     overflow: hidden;
@@ -247,7 +249,7 @@ section {
 }
 
 .btn-color-1:hover {
-    background: rgb(255,255,255);
+    background: 0;
     color: black;
 }
 
@@ -290,12 +292,13 @@ section {
     position: absolute;
     right: -5rem;
     bottom: 2.5rem;
+    mix-blend-mode: multiply;
 }
 
 .details-container {
     padding: 1rem;
     flex: 1;
-    background: white;
+    background: ghostwhite;
     border-radius: 2rem;
     border: rgb(53,53,53) 0.1rem solid;
     border-color: rgb(163,163,163);
@@ -307,11 +310,6 @@ section {
     height: 80%;
 }
 
-.section_pic-container {
-    height: 400px;
-    width: 400px;
-    margin: auto 0;
-}
 
 /* experience */ 
 
@@ -359,7 +357,7 @@ article .icon {
 
 .color-container {
     border-color: rgb(163,163,163);
-    background: rgb(250,250,250);
+    background: ghostwhite;
 }
 
 .interests-img {
@@ -396,6 +394,7 @@ article .icon {
     background: (250,250,250);
     margin: 2rem auto;
     padding: 0.5rem;
+    background: ghostwhite;
 }
 
 .contact-info-container {
