polished profile section. added wave, reformatted

--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ section {
 
 .section__text__p1 {
     text-align: center;
+    font-size: 1.25rem;
 }
 .section__text__p2 {
     font-size: 1.75rem;
@@ -209,6 +210,7 @@ section {
 .title {
     font-size: 3rem;
     text-align: center;
+    margin-bottom: 2%;
 }
 
 #socials-container {
@@ -427,3 +429,21 @@ footer {
 footer p{
     text-align: center;
 }
+.wave {
+    animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
+    animation-duration: 2.5s;        /* Change to speed up or slow down */
+    animation-iteration-count: infinite;  /* Never stop waving :) */
+    transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
+    display: inline-block;
+  }
+  
+  @keyframes wave-animation {
+      0% { transform: rotate( 0.0deg) }
+     10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
+     20% { transform: rotate(-8.0deg) }
+     30% { transform: rotate(14.0deg) }
+     40% { transform: rotate(-4.0deg) }
+     50% { transform: rotate(10.0deg) }
+     60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
+    100% { transform: rotate( 0.0deg) }
+  }
