--- a/media.css
+++ b/media.css
@@ -37,6 +37,12 @@
         height: 275px;
         margin: 0 auto 2rem;
     }
+    .section_pic-container1{
+        width: auto;
+        height: 250px;
+        justify-content: center;
+        margin-bottom: 2rem;
+    }
     .about-containers{
         margin-top: 0;
     }
@@ -80,6 +86,11 @@
     }
 
     .section_pic-container {
+        width: auto;
+        height: 46vw;
+        justify-content: center;
+    }
+    .section_pic-container1 {
         width: auto;
         height: 46vw;
         justify-content: center;
