--- a/style.css
+++ b/style.css
@@ -189,6 +189,12 @@ section {
     margin: auto 0;
 }
 
+.section_pic-container1 {
+    display: flex;
+    height: 200px;
+    margin: auto 0;
+}
+
 .section__text {
     align-self: center;
     text-align: center;
@@ -287,7 +293,7 @@ section {
 }
 
 .about-pic {
-    border-radius: 4rem;
+    border-radius: 3rem;
 }
 
 .arrow {
