fixed title bug

--- a/media.css
+++ b/media.css
@@ -46,8 +46,8 @@
     .about-containers{
         margin-top: 0;
     }
-    h1 {
-        padding-left: 8%;
+    #SD {
+        margin-left: 6%;
     }
 }
 
