--- a/style.css
+++ b/style.css
@@ -187,6 +187,23 @@ section {
     height: 80vh;
 }
 
+.profile-img {
+    animation: animate 5s ease-in-out infinite;
+    transition: all 1s ease-in-out;
+}
+
+@keyframes animate {
+    0% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+    50% {
+        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+    }
+    100% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+}
+
 .section_pic-container {
     display: flex;
     height: 400px;
