--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ a{
 
 
 a:hover{
-    box-shadow: inset 200px 0 0 0 #54b3d6;
+    box-shadow: inset 200px 0 0 0 #1e9bff;
     color: black;
     text-decoration: underline;
     text-underline-offset: 0.5rem;
@@ -86,7 +86,7 @@ a:hover{
 
 .logo:hover {
     cursor: default;
-    box-shadow: inset 200px 0 0 0 #54b3d6;
+    box-shadow: inset 200px 0 0 0 #1e9bff;
     color: black;
 }
 
@@ -203,6 +203,13 @@ section {
     }
 }
 
+#ashal-about-pic {
+    display: flex;
+    width: 250px ;
+    height: 400px;
+    margin: auto 0;
+}
+
 .section_pic-container {
     display: flex;
     height: 400px;
@@ -290,6 +297,76 @@ section {
 
 #about {
     position: relative;
+}
+.row {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-col-1 {
+    flex-basis: 35%;
+}
+.about-col-1 img {
+    width: 100%;
+    border-radius: 15%;
+}
+
+.about-col-2 {
+    flex-basis: 60%;
+}
+
+.about-sub-title {
+    color: white;
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+
+.tab-titles {
+    display: flex;
+    margin: 20px 0 40px;
+}
+
+.tab-links {
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+
+.tab-links::after {
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #1e9bff;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+
+.tab-links.active-link::after {
+    width: 50%;
+}
+
+.tab-contents ul li {
+    list-style: none;
+    margin: 10px 0;
+    color: white;
+}
+
+.tab-contents ul li span {
+    color: #1e9bff ;
+    font-size: 14px;
+}
+
+.tab-contents {
+    display: none;
+}
+
+.tab-contents.active-tab {
+    display: block;
 }
 
 .about-containers {
