--- a/media.css
+++ b/media.css
@@ -72,8 +72,8 @@
         height: 40vh;
     }
     #profile {
-        height: 83vh;
-        margin-bottom: 0;;
+        height: 85vh;
+        margin-bottom: 10%;
     }
     article {
         font-size: 1rem;
@@ -86,7 +86,7 @@
         flex-wrap: wrap;
     } 
     .contact-info-container {
-        margin: 0;
+        margin: 0.3rem;
     }
     .contact-info-container p, .nav-links li a {
         font-size: 1rem;
@@ -124,9 +124,10 @@
         text-align: justify;
     }
 
-
-
-    
+@media screen and (max-width:270px){
+    #profile {
+        margin-bottom: 30%;
+    }
 }
 
 
