--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ a:hover{
 
 section {
     padding: 4vh;
-    margin: 0 10rem;
+    margin: 0 5rem;
     box-sizing: border-box;
     min-height: fit-content;
 }
@@ -214,6 +214,10 @@ section {
     display: flex;
     height: 250px;
     margin: auto 0;
+}
+
+#SoftwareDev {
+    margin-left: 10%;
 }
 
 .section__text {
