--- a/media.css
+++ b/media.css
@@ -152,3 +152,13 @@
 
 }
 
+@media screen and (max-width:600px){
+    .container-interests .card:hover {
+        height: 500px;
+    }
+    .container-interests .card:hover .content {
+        top: 130px;
+        height: 350px;
+    }
+}
+
